GO側のAPI生成
