# backend/api/openapi.yaml
@@ -24,12 +24,76 @@ paths:
                   type: array
                 type: array
           description: ディストリビューションリスト
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/response_error'
+          description: Bad Request
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/response_error'
+          description: Internal Server Error
       summary: ディストリビューションのリストを取得する
       tags:
       - distributions
   /distributions/{distribution}:
+    delete:
+      description: ディストリビューションの削除
+      parameters:
+      - explode: false
+        in: path
+        name: distribution
+        required: true
+        schema:
+          type: string
+        style: simple
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/request_distribution_delete'
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                items:
+                  example:
+                    isDefault: true
+                    name: Ubuntu
+                    state: Running
+                    version: "2.0"
+                  items:
+                    $ref: '#/components/schemas/response_distribution'
+                  type: array
+                type: array
+          description: ディストリビューションリスト
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/response_error'
+          description: Bad Request
+        "404":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/response_error'
+          description: Not Found
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/response_error'
+          description: Internal Server Error
+      summary: ディストリビューションの削除
+      tags:
+      - distributions
     get:
-      description: ディストリビューション
+      description: ディストリビューションを取得する
       parameters:
       - explode: false
         in: path
@@ -45,7 +109,123 @@ paths:
               schema:
                 $ref: '#/components/schemas/response_distribution'
           description: ディストリビューション
+        "404":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/response_error'
+          description: Not Found
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/response_error'
+          description: Internal Server Error
       summary: ディストリビューションを取得する
+      tags:
+      - distributions
+    post:
+      description: ディストリビューションをインポートして新規作成する
+      parameters:
+      - explode: false
+        in: path
+        name: distribution
+        required: true
+        schema:
+          type: string
+        style: simple
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/request_distribution_post'
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                items:
+                  example:
+                    isDefault: true
+                    name: Ubuntu
+                    state: Running
+                    version: "2.0"
+                  items:
+                    $ref: '#/components/schemas/response_distribution'
+                  type: array
+                type: array
+          description: ディストリビューションリスト
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/response_error'
+          description: Bad Request
+        "404":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/response_error'
+          description: Not Found
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/response_error'
+          description: Internal Server Error
+      summary: ディストリビューションをインポートして新規作成する
+      tags:
+      - distributions
+    put:
+      description: ディストリビューションのコマンド実行
+      parameters:
+      - explode: false
+        in: path
+        name: distribution
+        required: true
+        schema:
+          type: string
+        style: simple
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/request_distribution_put'
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                items:
+                  example:
+                    isDefault: true
+                    name: Ubuntu
+                    state: Running
+                    version: "2.0"
+                  items:
+                    $ref: '#/components/schemas/response_distribution'
+                  type: array
+                type: array
+          description: ディストリビューションリスト
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/response_error'
+          description: Bad Request
+        "404":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/response_error'
+          description: Not Found
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/response_error'
+          description: Internal Server Error
+      summary: ディストリビューションのコマンド実行
       tags:
       - distributions
 components:
@@ -78,4 +258,60 @@ components:
       - name
       - state
       - version
+      type: object
+    response_error:
+      example:
+        code: "101"
+        message: ディストリビューションが見つかりませんでした。
+      properties:
+        code:
+          description: エラーコード
+          example: "101"
+          type: string
+        message:
+          description: エラーメッセージ
+          example: ディストリビューションが見つかりませんでした。
+          type: string
+      type: object
+    request_distribution_put:
+      properties:
+        command:
+          description: コマンド
+          enum:
+          - start
+          - stop
+          - shell
+          - export
+          - set-default
+          example: run
+          type: string
+        path:
+          description: コマンドが export の場合に、エクスポート先
+          example: c:\wsl\exp1
+          type: string
+      required:
+      - command
+      type: object
+    request_distribution_post:
+      properties:
+        name:
+          description: ディストリビューションの名前
+          example: Ubuntu 2
+          type: string
+        path:
+          description: インポート元のパス
+          example: c:\wsl\exp1
+          type: string
+      required:
+      - name
+      - path
+      type: object
+    request_distribution_delete:
+      properties:
+        name:
+          description: ディストリビューション名
+          example: Ubuntu
+          type: string
+      required:
+      - name
       type: object
