# backend/http/schema/model_request_distribution_delete.go
@@ -1,0 +1,17 @@
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+/*
+ * WSLManager API
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0
+ */
+
+package schema
+
+type RequestDistributionDelete struct {
+
+  // ディストリビューション名
+  Name string `json:"name"`
+}
