# backend/http/schema/model_request_distribution_post.go
@@ -1,0 +1,20 @@
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+/*
+ * WSLManager API
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0
+ */
+
+package schema
+
+type RequestDistributionPost struct {
+
+  // ディストリビューションの名前
+  Name string `json:"name"`
+
+  // インポート元のパス
+  Path string `json:"path"`
+}
