# backend/http/schema/model_request_distribution_put.go
@@ -1,0 +1,20 @@
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+/*
+ * WSLManager API
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0
+ */
+
+package schema
+
+type RequestDistributionPut struct {
+
+  // コマンド
+  Command string `json:"command"`
+
+  // コマンドが export の場合に、エクスポート先
+  Path string `json:"path,omitempty"`
+}
