# backend/http/schema/model_response_error.go
@@ -1,0 +1,20 @@
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+/*
+ * WSLManager API
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0
+ */
+
+package schema
+
+type ResponseError struct {
+
+  // エラーコード
+  Code string `json:"code,omitempty"`
+
+  // エラーメッセージ
+  Message string `json:"message,omitempty"`
+}
